--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
             </h1>
 
             <button id="create-task" class="btn btn-block btn-add" data-toggle="modal" data-target="#task-form-modal"><span class="oi oi-plus"></span>Thêm công việc</button>
-
-            <button id="remove-tasks" class="btn btn-block btn-delete"><span class="oi oi-trash"></span>Xóa tất cả</button>
             <button class="btn btn-block btn-delete"><span class="oi oi-trash"></span>Tomato Time</button>
-            <button class="btn btn-block btn-delete"><span class="oi oi-trash"></span>Lướt Web</button>
-            <button class="btn btn-block btn-delete"><span class="oi oi-trash"></span>Nghe nhạc</button>
-            <button class="btn btn-block btn-delete"><span class="oi oi-trash"></span>Tập thở</button>
+            <button class="btn btn-block btn-delete"><span class="oi oi-trash"></span>Ghi chú</button>
+            <button class="btn btn-block"><span class="oi oi-trash"></span>Lướt Web</button>
+            <button class="btn btn-block "><span class="oi oi-trash"></span>Nghe nhạc</button>
+            <button class="btn btn-block "><span class="oi oi-trash"></span>Flashcard</button>
+            <button class="btn btn-block "><span class="oi oi-trash"></span>Tập thở</button>
+            <button class="btn btn-block "><span class="oi oi-trash"></span>Câu nói hay</button>
+            <button id="remove-tasks" class="btn btn-block btn-delete"><span class="oi oi-trash"></span>Xóa tất cả</button>
             <span class="oi oi-task display-1 text-center mb-2 d-none d-lg-block mt-auto"></span>
             <p class="d-none d-lg-block">Hãy lên kế hoạch và hoàn thành tất cả công việc nhé
             </p>
